[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/GUI/Result.gd" type="Script" id=1]
[ext_resource path="res://resource/fonts/Result_Font_Big.res" type="DynamicFont" id=2]
[ext_resource path="res://resource/fonts/Result_Font_Normal.tres" type="DynamicFont" id=3]

[node name="Result" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="AttackWin" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="AttackWinLabel" type="Label" parent="AttackWin"]
margin_left = 5.55176
margin_top = 183.212
margin_right = 1921.55
margin_bottom = 646.212
custom_fonts/font = ExtResource( 2 )
text = "You Win !"
align = 1
valign = 1

[node name="AttackFail" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="AttackFailLabel" type="Label" parent="AttackFail"]
margin_left = 5.55176
margin_top = 183.212
margin_right = 1921.55
margin_bottom = 646.212
custom_fonts/font = ExtResource( 2 )
text = "Fail !"
align = 1
valign = 1

[node name="TimeLimitFail" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TimeLimitLabel" type="Label" parent="TimeLimitFail"]
margin_left = 5.55176
margin_top = 183.212
margin_right = 1921.55
margin_bottom = 646.212
custom_fonts/font = ExtResource( 2 )
text = "Fail !"
align = 1
valign = 1

[node name="SelfDestroyFail" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="SelfDestroyFailLabel" type="Label" parent="SelfDestroyFail"]
margin_left = 5.55176
margin_top = 183.212
margin_right = 1921.55
margin_bottom = 646.212
custom_fonts/font = ExtResource( 2 )
text = "Fail !"
align = 1
valign = 1

[node name="TechFail" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TechFailLabel" type="Label" parent="TechFail"]
margin_left = 5.55176
margin_top = 183.212
margin_right = 1921.55
margin_bottom = 646.212
custom_fonts/font = ExtResource( 2 )
text = "Fail !"
align = 1
valign = 1

[node name="NoTech" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="NoTechLabel" type="Label" parent="NoTech"]
margin_left = 5.55176
margin_top = 183.212
margin_right = 1921.55
margin_bottom = 646.212
custom_fonts/font = ExtResource( 2 )
text = "No Tech"
align = 1
valign = 1

[node name="NoEnergy" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="NoEnergyLabel" type="Label" parent="NoEnergy"]
margin_left = 5.55176
margin_top = 183.212
margin_right = 1921.55
margin_bottom = 646.212
custom_fonts/font = ExtResource( 2 )
text = "No Tech"
align = 1
valign = 1

[node name="TechWin" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TechWinLabel" type="Label" parent="TechWin"]
margin_left = 5.55176
margin_top = 183.212
margin_right = 1921.55
margin_bottom = 646.212
custom_fonts/font = ExtResource( 2 )
text = "No Tech"
align = 1
valign = 1

[node name="RetryButton" type="Button" parent="."]
margin_left = 682.98
margin_top = 735.771
margin_right = 1214.98
margin_bottom = 833.771
custom_fonts/font = ExtResource( 3 )
text = "Retry"

[node name="BackButton" type="Button" parent="."]
margin_left = 681.687
margin_top = 883.1
margin_right = 1213.69
margin_bottom = 981.1
custom_fonts/font = ExtResource( 3 )
text = "Back To Menu"
[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
